Fix the alignment issues in the SelectInputButton when the left panel is collapsed

--- a/components/src/core/components/Input/Select/select-input-button.scss
+++ b/components/src/core/components/Input/Select/select-input-button.scss
@@ -226,11 +226,11 @@
     padding: 0.5rem 0.75rem 0.5rem 1rem;
     cursor: default !important;
     :deep(.oxd-button-label-wrapper) {
-      display: block;
       overflow: initial;
       white-space: initial;
       text-overflow: initial;
       width: 100%;
+      font-weight: 800;
       .label-double-line-wrapper.label-double-line .label {
         overflow: initial;
         text-overflow: initial;
@@ -266,6 +266,9 @@ $dropdown-button-size: 24px;
   min-width: $dropdown-button-size;
   min-height: $dropdown-button-size;
   color: $oxd-select-input-button-color--secondary-pressed;
+  &.dropdown-minimized {
+    margin-left: 0.5rem;
+  }
 }
 .label-double-line-wrapper {
   vertical-align: middle;
@@ -276,6 +279,7 @@ $dropdown-button-size: 24px;
       margin-bottom: 0.25rem;
       font-size: 0.625rem;
       line-height: 1;
+      font-weight: 600;
     }
     .label {
       line-height: 0.75rem;
